# solstone-journal

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  conftest.py  pyproject.toml  setup_field_journal.sh
.codex/rules/: solstone.rules
docs/: APPS.md  BACKLOG.md  CALLOSUM.md  CONVEY.md  CORTEX.md  DOCTOR.md  FIELD_JOURNAL.md  OBSERVE.md  PROVIDERS.md  SOLCLI.md  THINK.md  environment.md  project-structure.md  testing.md
docs/design/: local-provider.md
docs/design/lodes/: observer-over-pl.md
records/decisions/: 260527-vpe-load-audio-pyav-decode-faster-whisper-removed.md
routines/templates/: commitment-audit.md  decision-review.md  domain-watch.md  energy-audit.md  meeting-prep.md  monthly-patterns.md  morning-briefing.md  relationship-pulse.md  weekly-review.md
scripts/: doctor.py  preflight.py
solstone/apps/activities/: call.py
solstone/apps/chat/: copy.py
solstone/apps/entities/: copy.py  routes.py  workspace.html
solstone/apps/health/: routes.py  workspace.html
solstone/apps/home/: needs_you.py  routes.py
solstone/apps/import/: ingest.py
solstone/apps/link/: call.py  copy.py  crockford32.py  relay_link.py  routes.py  workspace.html
solstone/apps/observer/: events.py  routes.py  utils.py
solstone/apps/reflections/: app.json  copy.py  dates.py  routes.py  workspace.html
solstone/apps/settings/: call.py  copy.py  facet_detail.html  local_bootstrap.py  mlx_bootstrap.py  routes.py  workspace.html
solstone/apps/speakers/: attribution.py  bootstrap.py  call.py  cohesion.py  copy.py  discovery.py  overview.html  owner.py  routes.py  status.py  time.py  workspace.html
solstone/apps/stats/: routes.py  workspace.html
solstone/apps/support/: call.py  diagnostics.py  workspace.html
solstone/apps/timeline/: background.html  rollup.py  routes.py
solstone/apps/todos/: call.py
solstone/apps/transcripts/: call.py  routes.py  workspace.html
solstone/convey/: __init__.py  backlog_copy.py  backlog_view.py  bridge.py  chat.py  copy.py  maint_cli.py  network_access.py  reasons.py  root.py
solstone/convey/secure_listener/: accept.py  runtime.py  tls.py  wsgi.py
solstone/convey/static/: app.js  chat_copy.js
solstone/observe/: describe.py  describe.schema.json  enrich.schema.json  export.py  grab.py  observer_cli.py  observer_client.py  peer_lookup.py  peer_unpair.py  pl_http.py  sense.py  transfer.py  utils.py
solstone/talent/: _routine_context.py  awareness_tender.md  chat.md  chat.schema.json  chat_context.py  daily_schedule.schema.json  digest.md  exec.md  facet_newsletter.md  heartbeat.md  joke_bot.md  morning_briefing.md  participation.schema.json  participation_entry.schema.json  partner.md  pulse.md  reflection.md  sense.schema.json  steward.md  steward.py  story.schema.json  weekly_reflection.md
solstone/think/: call.py  callosum.py  cluster.py  cogitate_policy.py  config_cli.py  cortex.py  cortex_client.py  data_state.py  detect_created.schema.json  detect_transcript.py  detect_transcript_json.schema.json  doctor.py  engage.py  facets.py  features.py  health_cli.py  heartbeat.py  identity.py  install_guard.py  install_provider.py  journal_config.py  journal_default.json  journal_stats.py  logs_cli.py  markdown.py  models.py  password_cli.py  pipeline_health.py  preflight.py  probe.py  providers_cli.py  reprocess.py  runner.py  scheduler.py  segment.py  service.py  setup.py  setup_events.py  sol_cli.py  stats_schema.py  (+7 more)
tests/: _baseline_harness.py  bundled_provider_fixtures.py  conftest.py  openhands_fakes.py  test_activities.py  test_activity_state.py  test_anthropic.py  test_api_baselines.py  test_app_activities.py  test_app_reflections.py  test_app_sol.py  test_app_support.py  test_bundled_providers.py  test_bundled_providers_http.py  test_callosum.py  test_chat_closer.py  test_chat_context.py  test_chat_copy.py  test_chat_runtime.py  test_cli_prog_fidelity.py  test_cli_provider.py  test_cluster.py  test_cluster_full.py  test_cogitate_coder.py  test_cogitate_policy.py  test_config.py  test_config_cli.py  test_convey_facet_pill.py  test_convey_network_access.py  test_cortex.py  test_cortex_client.py  test_deferred_deletes.py  test_describe_extraction_no_entity_prefeed.py  test_detect_created_schema.py  test_detect_transcript_schema.py  test_docs.py  test_doctor.py  test_doctor_features.py  test_entities.py  test_entity_observer_context.py  (+131 more)
tests/fixtures/: health_logs_classified.jsonl
tests/integration/: test_bundled_install_real_uv.py  test_bundled_provider_migration.py  test_cogitate_facade_agent_construction.py  test_google_provider.py  test_link_join_observer_e2e.py  test_observer_over_pl_e2e.py  test_ollama_provider.py  test_schema_provider_parity.py  test_transfer_export_over_pl_e2e.py
tests/link/: _offlan_e2e_runner.py  certless_helpers.py  client.py  test_auth.py  test_authorized_clients_role.py  test_certless_pair.py  test_certless_structural_gate.py  test_dialer_unit.py  test_link_cli_namespace.py  test_link_join_existing_dir.py  test_link_join_label_validation.py  test_link_join_observer.py  test_link_join_peer_unsupported.py  test_link_serve.py  test_nonces.py  test_nonces_role.py  test_offlan_pair_e2e.py  test_pairing_window.py  test_paths.py  test_per_request_revocation.py  test_relay_client.py  test_tls_contexts.py
tests/observer_install/: conftest.py  test_common.py  test_linux.py  test_status_extension.py  test_tmux.py
tests/services/: test_brand_canon.py  test_cli_namespace.py  test_constants.py  test_scout_storage.py  test_short_token_envelope.py  test_spl_storage.py
tests/spl/: test_relay_client.py  test_service.py
vpe/workspace/: review-l5c-services-enable-scout.md
(+191 files in other folders)
