[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solstone"
version = "0.3.6"
description = "Navigate Life Intelligently"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Jer Miller", email = "jer@solpbc.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["audio", "transcription", "screenshot", "multimodal", "ai", "gemini"]

dependencies = [
    # Core dependencies
    "python-dotenv",
    "google-genai",
    "Flask[async]",
    "Markdown",
    "mistune",
    "python-frontmatter",

    # Natural language time parsing
    "timefhuman",
    "Pillow",
    "numpy",
    "setproctitle",
    "av",

    "openai>=1.2.0",
    "anthropic",
    "httpx",
    "h2",
    "cryptography>=42",
    "pyjwt>=2.8",
    "jsonschema>=4.26,<5",
    "genai-prices",
    # Link tunnel service (think/link/): TLS 1.3 in memory-BIO mode over
    # an opaque WebSocket; requires pyOpenSSL for the handshake-time
    # verify callback that stdlib ssl can't express.
    "pyOpenSSL>=24.0",
    "websockets>=13.0",
    "icalendar",
    "blessed>=1.20.0",
    "psutil",
    "tzlocal",
    "python-slugify",
    "rapidfuzz",
    "typer",
    "userpath>=1.9.2,<2",

    # Audio processing
    "soundfile",
    "onnxruntime>=1.20.0,!=1.24.1",
    "kaldi-native-fbank>=1.22",
    # solstone/apps/speakers/{owner,discovery}.py use sklearn.cluster.HDBSCAN. Previously
    # pulled transitively via resemblyzer; now a direct dep.
    "scikit-learn>=1.3",

    # Media processing
    "opencv-python-headless",

    "requests",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
]

whisper = [
    "faster-whisper>=1.0.0",
]

# Bundle of all stdlib extras (excludes parakeet variants — those are
# mutually-exclusive hardware backends, opt-in).
all = [
    "weasyprint>=60.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
    "faster-whisper>=1.0.0",
]

parakeet-onnx-cpu = [
    "onnx-asr>=0.11.0",
    "onnxruntime>=1.25.0",
    "huggingface-hub>=0.24",
]
parakeet-onnx-cuda = [
    "onnx-asr>=0.11.0",
    "onnxruntime-gpu>=1.25.0",
    "huggingface-hub>=0.24",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-nvjitlink-cu12",
]

[project.scripts]
sol = "solstone.think.sol_cli:main"

[project.urls]
Homepage = "https://github.com/solpbc/solstone"
Repository = "https://github.com/solpbc/solstone"
Documentation = "https://github.com/solpbc/solstone/blob/main/README.md"
"Bug Tracker" = "https://github.com/solpbc/solstone/issues"

[tool.setuptools.packages.find]
include = ["solstone*"]

[tool.setuptools.package-data]
"solstone.apps" = ["*/app.json", "*/*.html", "*/guides/*.md", "*/talent/*.md", "*/talent/*.py", "*/talent/*.json", "*/talent/*.schema.json", "*/talent/*/SKILL.md", "*/static/*", "*/static/**/*"]
"solstone.think" = ["*.md", "*.json", "templates/*.md", "policies/*.toml"]
"solstone.talent" = ["*.md", "*.py", "*.schema.json", "*/SKILL.md", "*/references/*.md"]
"solstone.observe" = ["*.md", "*.json", "*.schema.json", "assets/*.onnx", "categories/*.md", "transcribe/*.md", "transcribe/*.json", "transcribe/assets/*.onnx", "transcribe/_fixtures/*.wav", "transcribe/parakeet_helper/Package.swift", "transcribe/parakeet_helper/README.md", "transcribe/parakeet_helper/Sources/parakeet-helper/main.swift", "transcribe/parakeet_helper/_bin/parakeet-helper"]
"solstone.convey" = ["templates/*.html", "static/*", "static/**/*"]

# Development tools configuration
[tool.ruff]
target-version = "py310"
exclude = [".venv", "scratch", "logs", "build", "dist"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501", "E203", "E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", ".venv", "scratch", "logs", "build", "dist"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
testpaths = ["tests", "solstone/apps"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "live: marks tests that require an explicit live sandbox opt-in",
    "xdist_group: marks tests to run in the same xdist worker group",
]
timeout = 15
tmp_path_retention_policy = "none"
filterwarnings = [
    # Third-party deprecation warnings (Python 3.14+)
    "ignore:codecs.open.* is deprecated:DeprecationWarning",
    "ignore:.*_UnionGenericAlias.* is deprecated:DeprecationWarning",
    "ignore:.*DefaultEventLoopPolicy.* is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "freezegun",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "ruff",
]
